Image Bux Fixed

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12" style="margin-top: 20px">
-                <img src="images/SElogo4.png" height="60" style="float:left"><span style="margin-left:10px;font-family: Segoe UI;font-size: 20px">ProNote</span><br><span style="margin-left:10px;font-family: Segoe UI;font-size: 20px">Where text editing meets security.</span>
+                <img src="images/pnlogo.png" height="60" style="float:left"><span style="margin-left:10px;font-family: Segoe UI;font-size: 20px">ProNote</span><br><span style="margin-left:10px;font-family: Segoe UI;font-size: 20px">Where text editing meets security.</span>
                 <p>
                   <br><br>
                   Images by: <a style="color:#182628" target="_blank" href="https://unsplash.com/">Unsplash</a>, <a style="color:#182628" target="_blank" href="https://pixabay.com/">Pixabay</a> and <a style="color:#182628" target="_blank" href="https://www.freepik.com/">Freepik</a>
