--- a/documentation.html
+++ b/documentation.html
@@ -141,7 +141,7 @@
           <div class="container" style="position:relative;left:220px;">
             <div class="row">
               <div class="col l6 s12" style="margin-top: 20px">
-                <img src="images/SElogo4.png" height="60" style="float:left"><span style="margin-left:10px;font-family: Segoe UI;font-size: 20px">ProNote</span><br><span style="margin-left:10px;font-family: Segoe UI;font-size: 20px">Where text editing meets security.</span>
+                <img src="images/pnlogo.png" height="60" style="float:left"><span style="margin-left:10px;font-family: Segoe UI;font-size: 20px">ProNote</span><br><span style="margin-left:10px;font-family: Segoe UI;font-size: 20px">Where text editing meets security.</span>
                 <p>
                   <br><br>
                   Images by: <a href="https://unsplash.com/" target="_blank" style="color:#182628">Unsplash</a>, <a href="https://pixabay.com/" target="_blank" style="color:#182628">Pixabay</a> and <a href="https://www.freepik.com/" target="_blank" style="color:#182628">Freepik</a>
