--- a/download.html
+++ b/download.html
@@ -36,7 +36,7 @@
 </ul>
   <div class="heading">
   Download ProNote now
-  <p>The most secure text editor is here.Download now.</p>
+  <p>The new secure text editor is here.Download now.</p>
 </div>
 	
 <div class="row crow">
