--- a/download.html
+++ b/download.html
@@ -47,7 +47,7 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4">ProNote Light Theme<i class="material-icons right">more_vert</i></span>
-      <p><a class="btn-large waves-effect green white-text darken-text-2" href="ProNote-setup.exe"download> <i class="material-icons left">file_download</i><span>Download</span></a></p>
+      <p><a class="btn-large waves-effect green white-text darken-text-2" href="ProNoteLight-setup.exe"download> <i class="material-icons left">file_download</i><span>Download</span></a></p>
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4">ProNote Light Theme<i class="material-icons right">close</i></span>
@@ -116,7 +116,3 @@
     </script>
 </body>
 </html>
-
-<!-- normal data - illegalblocksizeexception -->
-<!-- wrong password - badpaddingexception -->
-<!-- null password checking -->
