--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               </div>
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Stay Connected</h5>
-                <p class="grey-text text-lighten-4"><a target="_blank" href="mailto:help.pronote@gmail.com"><i class="fab fa-google"></i></a><a target="_blank" href="https://github.com/devansh2805"><i class="fab fa-github"></i></a><a target="_blank" href="https://www.linkedin.com/in/devansh-shah-0abb34197"><i class="fab fa-linkedin-in"></i></a></p> <br><span style="font-size: 13px">Website Developed By: <a target="_blank" style="color:white" href="https://www.linkedin.com/in/ojasvi-naik-009980194">Ojasvi Naik</a> </span>
+                <p class="grey-text text-lighten-4"><a target="_blank" href="mailto:help.pronote@gmail.com"><i class="fab fa-google"></i></a><a target="_blank" href="https://github.com/devansh2805"><i class="fab fa-github"></i></a><a target="_blank" href="https://www.linkedin.com/in/devansh-shah-0abb34197"><i class="fab fa-linkedin-in"></i></a></p>
               </div>
             </div>
           </div>
